@@ -10,6 +10,9 @@ What's New in Stackless 3.X.X?
 
 *Release date: XXXX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issue/60
+  Fix a crash
+
 - Fix for test_watchdog_on_tasklet_hard due to re !!!. The caching behaviour 
   of re.py was changed in debug mode, which influenced the number of opcodes 
   spent in our test.
